fix: Fix exceeding 100vh and appearing vertical scrollbar
Instead of using margin-top in header, added a virtual box which calculates the header like if status-bar exists in relative position.

--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -27,3 +27,8 @@
 .status-bar__column .fa-battery-full {
   margin: 0px 5px;
 }
+
+.virtual-status-bar {
+  width: 100%;
+  height: 25px;
+}
